# os-net-multiplexing

./: .gitignore  CMakeLists.txt  Client.cpp  Client.h  ClientMain.cpp  EchoClient.cpp  EchoClient.h  EchoServer.cpp  EchoServer.h  Epoll.cpp  Epoll.h  LICENSE  Makefile  README.md  Server.cpp  Server.h  ServerMain.cpp  Socket.cpp  Socket.h  TCPclient.cpp  TCPserver.cpp  Utils.h  client.c  client.cpp  client.h  client.hpp  client_main.cpp  client_run.cpp  common.c  common.h  d.h  debug_echo_client.cpp  debug_echo_client.h  descriptor.h  diffOS.c  echo_server.cpp  echo_server.h  epoll.cpp  epoll.h  epolling.cpp  (+50 more)
Client/: Client.cpp  Client.h  ClientException.h  client.cpp
Server/: Server.cpp  Server.h  ServerException.h  server.cpp
client/: Client.cpp  Client.h  TCPClient.cpp  TCPClient.h  client.cpp  client.h  main.cpp
client-lib/: client.cpp  client.h  client_exception.h
common/: IHandle.h
headers/: DBase.h  Message.h  POP3Server.h  Session.h  User.h  Utils.h
lib/: epoll_wrapper.cpp  epoll_wrapper.h  error.h  socket_wrapper.cpp  socket_wrapper.h
multiplex/: EpollMultiplexor.cpp  EpollMultiplexor.h  Multiplexor.h  SelectMultiplexor.cpp  SelectMultiplexor.h
server/: Acceptor.cpp  Acceptor.h  Server.cpp  Server.h  TCPServer.cpp  TCPServer.h  main.cpp  server.cpp  server.h
server-lib/: server.cpp  server.h  server_execption.h
socket/: socket_wrapper.cpp  socket_wrapper.h
socket_descriptor/: socket_descriptor.cpp  socket_descriptor.h
src/: DBase.cpp  Message.cpp  POP3Server.cpp  Session.cpp  User.cpp  Utils.cpp  client.cpp  rwutils.cpp  rwutils.h  server.cpp
starter/: client_starter.cpp  server_starter.cpp
tcp/: TCPSocket.cpp  TCPSocket.h
util/: ConsoleHandler.h  EpollWaiter.cpp  EpollWaiter.h  EventManager.cpp  EventManager.h
utils/: Utils.cpp  Utils.h  fd_wrapper.cpp  fd_wrapper.hpp  logger.cpp  logger.hpp  socket_wrapper.cpp  socket_wrapper.hpp  utills.cpp  utils.h
